--- a/src/Vista/frmBoleto.form
+++ b/src/Vista/frmBoleto.form
@@ -69,7 +69,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace pref="8" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jPanel1" max="32767" attributes="0"/>
                   <Component id="jPanel2" max="32767" attributes="0"/>
@@ -142,9 +142,13 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="txtZona" max="32767" attributes="0"/>
                           <Component id="txtMesa" max="32767" attributes="0"/>
-                          <Component id="txtCosto" max="32767" attributes="0"/>
                           <Component id="dtVigencia" alignment="1" pref="200" max="32767" attributes="0"/>
                           <Component id="txtImporte" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="txtCosto" min="-2" pref="105" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="txtMitad" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <Component id="btnCancelar" min="-2" pref="200" max="-2" attributes="0"/>
                       <Component id="txtSilla" alignment="0" min="-2" pref="195" max="-2" attributes="0"/>
@@ -171,8 +175,9 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtSucursal" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="txtCosto" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="txtMitad" alignment="1" min="-2" pref="39" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtTelefono" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="txtSilla" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -398,6 +403,16 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="text" type="java.lang.String" value="invitado/s"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtMitad">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                <TitledBorder title="50%"/>
+              </Border>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
