--- a/src/FormulariosAyuda/Operaciones/AyudaHomeOperaciones.form
+++ b/src/FormulariosAyuda/Operaciones/AyudaHomeOperaciones.form
@@ -57,19 +57,26 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="131" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="97" max="32767" attributes="0"/>
+              <EmptySpace pref="134" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+              <Component id="textArea1" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="206" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+              <Component id="textArea1" pref="319" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -77,7 +84,19 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ayuda Home Operaciones PARTE OPERACIONES"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="16" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Manual de uso Inicio Operaciones"/>
+      </Properties>
+    </Component>
+    <Component class="java.awt.TextArea" name="textArea1">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="12" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="MEN&#xda; PRINCIPAL:&#xa;&#x9;&#xb0; Boton ventas por sucursales: Visualiza ventas de boletos por sucursales.&#xa;&#x9;&#xb0; Boton ventas totales: Visualiza ventas de boletos por sucursal.&#xa;&#x9;&#xb0; Boton ventas por socio: Visualiza ventas de boletos por socios.&#xa;&#x9;&#xb0; Boton cerrar sesi&#xf3;n: Elimina la sesi&#xf3;n del usuario y regresa al modulo login.&#xa;&#xa;&#xa;AYUDA:&#xa;&#x9;&#xb0; Boton ayuda: Manual de uso del sistema.&#xa;&#x9;&#xb0; Boto acerca de: Informaci&#xf3;n del sistema.&#xa;&#xa;&#xa;VISUALIZACION DE DATOS:&#xa;&#x9;&#xb0; Usuario: Muestra el numero de usuario.&#xa;&#x9;&#xb0; Nombre: Nombre completo del usuario."/>
       </Properties>
     </Component>
   </SubComponents>
